# restsdk_https_client

./: .gitignore  CMakeLists.txt  CMakeSettings.json  dependencies.cmake  flags.cmake  paths.cmake
restsdk_https_client/: CMakeLists.txt  restsdk_https_client.cpp  restsdk_https_client.h
